<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cover1"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/jura_medium"
        android:text="@string/astronomy_quiz"
        android:textColor="@color/color_primary_light"
        android:textSize="@dimen/header" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/jura_medium"
        android:text="@string/because_we_are_made_of_star_stuffs"
        android:textColor="@color/color_divider"
        android:textSize="@dimen/header_two" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/adjust_margin_padding_ten"
        android:background="@drawable/button"
        android:fontFamily="@font/jura_regular"
        android:gravity="center_vertical"
        android:hint="@string/name_hint"
        android:inputType="textCapSentences"
        android:padding="@dimen/adjust_margin_padding_ten"
        android:textColor="@color/color_primary_light"
        android:textColorHint="@color/color_primary" />

    <Button
        android:id="@+id/play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/button"
        android:fontFamily="@font/jura_bold"
        android:gravity="center_vertical"
        android:onClick="quizPlay"
        android:padding="@dimen/adjust_margin_padding_ten"
        android:text="@string/go_explore"
        android:textColor="@color/color_primary_light" />
</LinearLayout>