<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cover5"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginEnd="@dimen/adjust_margin_padding_ten"
        android:layout_marginStart="@dimen/adjust_margin_padding_ten"
        android:layout_marginTop="@dimen/adjust_margin_padding_ten"
        android:layout_weight="1"
        app:cardElevation="@dimen/adjust_margin_padding_five"
        app:cardMaxElevation="@dimen/adjust_margin_padding_ten"
        card_view:cardCornerRadius="@dimen/adjust_margin_padding_five">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/questions_image_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/q1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/score_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/adjust_margin_padding_ten"
                android:fontFamily="@font/jura_bold"
                android:text="@string/_0"
                android:textSize="@dimen/header_two" />

            <TextView
                android:id="@+id/total_questions_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/adjust_margin_padding_ten"
                android:fontFamily="@font/jura_bold"
                android:gravity="end"
                android:text="@string/_1_3"
                android:textSize="@dimen/header_two" />
        </LinearLayout>

    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/adjust_margin_padding_five"
        android:layout_marginEnd="@dimen/adjust_margin_padding_ten"
        android:layout_marginStart="@dimen/adjust_margin_padding_ten"
        android:layout_marginTop="@dimen/adjust_margin_padding_five"
        android:layout_weight="1"
        app:cardBackgroundColor="@color/color_primary_dark"
        app:cardElevation="@dimen/adjust_margin_padding_five"
        app:cardMaxElevation="@dimen/adjust_margin_padding_ten"
        card_view:cardCornerRadius="@dimen/adjust_margin_padding_five">

        <TextView
            android:id="@+id/questions_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/text_margin"
            android:layout_marginStart="@dimen/text_margin"
            android:layout_marginTop="@dimen/adjust_margin_padding_five"
            android:fontFamily="@font/jura_semibold"
            android:text="@string/questions"
            android:textSize="@dimen/header_two" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/options_margin"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/answer1_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_margin"
                android:fontFamily="@font/jura_regular"
                android:onClick="onRadioButtonClicked"
                android:text="@string/answer_1" />

            <RadioButton
                android:id="@+id/answer2_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_margin"
                android:fontFamily="@font/jura_regular"
                android:onClick="onRadioButtonClicked"
                android:text="@string/answer_2" />

            <RadioButton
                android:id="@+id/answer3_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_margin"
                android:fontFamily="@font/jura_regular"
                android:onClick="onRadioButtonClicked"
                android:text="@string/answer_3" />

            <RadioButton
                android:id="@+id/answer4_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_margin"
                android:fontFamily="@font/jura_regular"
                android:onClick="onRadioButtonClicked"
                android:text="@string/answer_4" />
        </RadioGroup>


    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/answer_it_button"
            style="@style/CardView.Dark"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/adjust_margin_padding_ten"
            android:layout_marginEnd="@dimen/adjust_margin_padding_five"
            android:layout_marginStart="@dimen/adjust_margin_padding_ten"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:fontFamily="@font/jura_bold"
            android:onClick="answerButton"
            android:text="@string/answer_it" />

        <Button
            android:id="@+id/leave_button"
            style="@style/CardView.Dark"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/adjust_margin_padding_ten"
            android:layout_marginEnd="@dimen/adjust_margin_padding_ten"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:fontFamily="@font/jura_bold"
            android:onClick="leaveButton"
            android:text="@string/leave_result" />

    </LinearLayout>

</LinearLayout>